Closed
Bug 709653
Opened 14 years ago
Closed 14 years ago
Fix GC heap memory reporters
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: n.nethercote, Assigned: n.nethercote)
Details
(Whiteboard: [MemShrink:P2])
Attachments
(1 file)
|
19.20 KB,
patch
|
bhackett1024
:
review+
|
Details | Diff | Splinter Review |
I found that the sum of all the GC heap memory reporters was about 5%
greater than the total size of the GC heap. Turns out there there two culprits:
- The computation of gcHeapChunkDirtyUnused didn't account for
gcHeapShapesBase.
- "type-inference/object-main" was incorrectly marked as having
JS_GC_HEAP_KIND.
So "explicit", "gc-heap-chunk-dirty-unused", and "heap-unclassified" were all inflated slightly.
I added an assertion to make sure that this mismatch will be detected if it
occurs again in the future. (This assertion would also have caught the
incorrect kind markings in bug 704391.)
I also renamed countDecommittedArenas() because it was confusing the hell
out of me.
Attachment #580826 -
Flags: review?(bhackett1024)
| Assignee | ||
Updated•14 years ago
|
Whiteboard: [MemShrink]
Updated•14 years ago
|
Attachment #580826 -
Flags: review?(bhackett1024) → review+
| Assignee | ||
Updated•14 years ago
|
Whiteboard: [MemShrink] → [MemShrink:P2]
| Assignee | ||
Comment 1•14 years ago
|
||
Comment 2•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla11
You need to log in
before you can comment on or make changes to this bug.
Description
•