Bug 709653 - Fix GC heap memory reporters.  r=bhackett.